# cookiecutter-sveltekit-fastapi

./: .gitignore  LICENSE.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  ProcfileHoncho  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js
{{cookiecutter.project_slug}}/app/: config.py  main.py
{{cookiecutter.project_slug}}/server/: App.js
{{cookiecutter.project_slug}}/src/lib/: Counter.svelte
{{cookiecutter.project_slug}}/src/routes/: index.svelte
